# gic-financial-chatbot

./: .env.example  README.md  main.py  pyproject.toml  test_figure_extraction.py
